--- a/src/html/header-sidebar.html
+++ b/src/html/header-sidebar.html
@@ -13,12 +13,12 @@
     <main class="flex">
 
         <!-- start side navbar  -->
-        <aside id="sidebar" class="w-64 h-screen  sticky top-0 transition-all duration-100 ">
+        <aside id="sidebar" class="min-w-[16rem] max-w-[16rem] h-screen  sticky top-0 transition-all duration-100 ">
             <div
-                class="flex flex-col h-full pl-6 pr-4 py-2 justify-between bg-gray-800 text-white overflow-hidden hover:overflow-y-auto scrollbar">
+                class="flex flex-col h-full pl-6 pr-4 py-2 justify-between bg-gray-800 text-slate-200 overflow-hidden hover:overflow-y-auto scrollbar">
                 <div class="flex flex-col">
                     <div class="flex justify-between items-center py-3">
-                        <a id="logo" href="#" class="text-xl font-bold">PUCShop</a>
+                        <a id="logo" href="#" class="text-2xl font-bold">PUCShop</a>
                         <!-- sidebar controller button  -->
                         <button onclick="sidebarHandler()"
                             class="bg-gray-700 p-1 rounded-full hover:bg-gray-900 hover:text-white">
@@ -83,7 +83,7 @@
                                 </div>
                                 <!-- start page list  -->
                                 <div id='pages' class="sub-menu block ml-9 text-gray-300">
-                                    <ul>
+                                    <ul class="sub-menu-item">
                                         <li>
                                             <a href="./demo-page.html" class="hover:text-indigo-500">Demo Page</a>
                                         </li>
@@ -119,12 +119,12 @@
                                     </button>
                                 </div>
                                 <div id='customer' class="sub-menu hidden ml-9 text-gray-300">
-                                    <ul>
+                                    <ul class="sub-menu-item">
                                         <li>
                                             <a href="#" class="hover:text-indigo-500">Customer List</a>
                                         </li>
                                         <li>
-                                            <a href="#" class="hover:text-indigo-500">Add newcustomer</a>
+                                            <a href="#" class="hover:text-indigo-500">Add new customer</a>
                                         </li>
                                         <li>
                                             <a href="#" class="hover:text-indigo-500">Brand</a>
@@ -157,7 +157,7 @@
                                     </button>
                                 </div>
                                 <div id='admin' class="sub-menu hidden ml-9 text-gray-300">
-                                    <ul>
+                                    <ul class="sub-menu-item">
                                         <li>
                                             <a href="#" class="hover:text-indigo-500">Admins List</a>
                                         </li>
@@ -193,7 +193,7 @@
                                     </button>
                                 </div>
                                 <div id='ecommerce' class="sub-menu hidden ml-9 text-gray-300">
-                                    <ul>
+                                    <ul class="sub-menu-item">
                                         <li>
                                             <a href="#" class="hover:text-indigo-500">Product</a>
                                         </li>
@@ -249,7 +249,7 @@
                                     </button>
                                 </div>
                                 <div id='offers' class="sub-menu hidden ml-9 text-gray-300">
-                                    <ul>
+                                    <ul class="sub-menu-item">
                                         <li>
                                             <a href="#" class="hover:text-indigo-500">Offer List</a>
                                         </li>
@@ -334,7 +334,7 @@
                                     </button>
                                 </div>
                                 <div id='settings' class="sub-menu hidden ml-9 text-gray-300">
-                                    <ul>
+                                    <ul class="sub-menu-item">
                                         <li>
                                             <a href="#" class="hover:text-indigo-500">Carousel</a>
                                         </li>
@@ -444,7 +444,41 @@
                         <pre class="h-96">
                             <>Write your code here<\>
                         </pre>
-
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet, debitis modi! Nemo eius
+                            odio aperiam deleniti voluptas! Nam unde eaque provident expedita id non officiis, ducimus
+                            incidunt voluptates quas excepturi?</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet, debitis modi! Nemo eius
+                            odio aperiam deleniti
+                            voluptas! Nam unde eaque provident expedita id non officiis, ducimus incidunt voluptates
+                            quas excepturi?</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet, debitis modi! Nemo eius
+                            odio aperiam deleniti
+                            voluptas! Nam unde eaque provident expedita id non officiis, ducimus incidunt voluptates
+                            quas excepturi?</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet, debitis modi! Nemo eius
+                            odio aperiam deleniti
+                            voluptas! Nam unde eaque provident expedita id non officiis, ducimus incidunt voluptates
+                            quas excepturi?</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet, debitis modi! Nemo eius
+                            odio aperiam deleniti
+                            voluptas! Nam unde eaque provident expedita id non officiis, ducimus incidunt voluptates
+                            quas excepturi?</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet, debitis modi! Nemo eius
+                            odio aperiam deleniti
+                            voluptas! Nam unde eaque provident expedita id non officiis, ducimus incidunt voluptates
+                            quas excepturi?</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet, debitis modi! Nemo eius
+                            odio aperiam deleniti
+                            voluptas! Nam unde eaque provident expedita id non officiis, ducimus incidunt voluptates
+                            quas excepturi?</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet, debitis modi! Nemo eius
+                            odio aperiam deleniti
+                            voluptas! Nam unde eaque provident expedita id non officiis, ducimus incidunt voluptates
+                            quas excepturi?</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet, debitis modi! Nemo eius
+                            odio aperiam deleniti
+                            voluptas! Nam unde eaque provident expedita id non officiis, ducimus incidunt voluptates
+                            quas excepturi?</p>
                     </div>
 
                 </div>
