Add some new pages

--- a/src/html/category-list.html
+++ b/src/html/category-list.html
@@ -1,3 +1,7 @@
+<!-- 
+    Author: Meskatul Islam
+    Email: meskatcse@gmail.com
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -91,7 +95,7 @@
                                             <a href="./product-list.html" class="hover:text-indigo-500">Product List</a>
                                         </li>
                                         <li>
-                                            <a href="./category-list.html" class="hover:text-indigo-500">Category
+                                            <a href="./category-list.html" class="hover:text-indigo-500 text-indigo-500">Category
                                                 List</a>
                                         </li>
                                         <li>
