--- a/src/html/customer-list.html
+++ b/src/html/customer-list.html
@@ -1,3 +1,7 @@
+<!-- 
+    Author: Meskatul Islam
+    Email: meskatcse@gmail.com
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -99,7 +103,7 @@
                                                 List</a>
                                         </li>
                                         <li>
-                                            <a href="./customer-list.html" class="hover:text-indigo-500">Customer
+                                            <a href="./customer-list.html" class="hover:text-indigo-500 text-indigo-500">Customer
                                                 List</a>
                                         </li>
                                     </ul>
